Solved footer issue on mobile and fixed bug in algorithm when computer plays O on master (diagonal X problem)

--- a/style.css
+++ b/style.css
@@ -17,10 +17,16 @@ header h1{
 }
 
 footer{
-    width: 100%;
+    width: 100%;    
     position: absolute;
     left: 0;
-    bottom: -10px;        
+    bottom: -2px;        
+}
+
+@media only screen and (max-width: 500px) {
+footer{
+    display: none; 
+    }
 }
 
 #game{
